# football-ads-muter

./: .gitignore  LICENSE  README.md  football_ad_muter.py  label_frames.py  pyproject.toml  self_train.py  train_model.py  train_one_class.py
models/: football_one_class.joblib
scripts/: bootstrap.ps1  bootstrap.sh
